--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Configurations
-title:            IRS.EA
+title:            MC's EA Notes
 longtitle:
 author:           MCC
 email:            mcurcio@duck.com
 description: >
-  MCC's Notes for EA
+  MC's EA Notes
 
 version:          1.0
 gitbook_version:  3.2.3
