--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl:          '/irs.ea'
 rss:              RSS
 
 # bootstrap: use the remote theme for the site itself
-#remote_theme: sighingnow/jekyll-gitbook
+remote_theme: sighingnow/jekyll-gitbook
 
 toc:
   enabled: true
@@ -67,6 +67,7 @@ ordered_collections:
   - pages
   - hock
   - posts
+  - docs
   - ea
 
 page_width: 1100px
